--- a/pom.xml
+++ b/pom.xml
@@ -83,17 +83,49 @@
 			<version>3.6</version>
 		</dependency>
 
-		<!--dependency> <groupId>org.geotools</groupId> <artifactId>gt-main</artifactId> 
-			<version>12-RC1</version> </dependency> <dependency> <groupId>org.geotools</groupId> 
-			<artifactId>gt-referencing</artifactId> <version>12-RC1</version> </dependency> 
-			<dependency> <groupId>org.geotools</groupId> <artifactId>gt-epsg-hsql</artifactId> 
-			<version>12-RC1</version> </dependency -->
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-main</artifactId> 
+			<version>12-RC1</version> 
+		</dependency>
+		<dependency> 
+			<groupId>org.geotools</groupId> 
+			<artifactId>gt-referencing</artifactId> 
+			<version>12-RC1</version>
+		</dependency> 
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-epsg-hsql</artifactId> 
+			<version>12-RC1</version>
+		</dependency>
 
-		<!--dependency> <groupId>org.gdal</groupId> <artifactId>gdal</artifactId> 
-			<version>2.2.0</version> </dependency -->
+		<dependency>
+			<groupId>org.gdal</groupId>
+			<artifactId>gdal</artifactId> 
+			<version>2.2.0</version>
+		</dependency>
 
 	</dependencies>
 
+
+    <repositories>
+      <repository>
+        <id>osgeo</id>
+        <name>OSGeo Release Repository</name>
+        <url>https://repo.osgeo.org/repository/release/</url>
+        <snapshots><enabled>false</enabled></snapshots>
+        <releases><enabled>true</enabled></releases>
+      </repository>
+      <repository>
+        <id>osgeo-snapshot</id>
+        <name>OSGeo Snapshot Repository</name>
+        <url>https://repo.osgeo.org/repository/snapshot/</url>
+        <snapshots><enabled>true</enabled></snapshots>
+        <releases><enabled>false</enabled></releases>
+      </repository>
+    </repositories>
+
+<!--
 	<repositories>
 		<repository>
 			<id>osgeo</id>
@@ -101,6 +133,7 @@
 			<url>http://download.osgeo.org/webdav/geotools/</url>
 		</repository>
 	</repositories>
+-->
 
 	<build>
 		<plugins>
