--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -30,7 +30,7 @@ osmPostgis.login=postgres
 osmPostgis.srid=3857
 
 ### Elevation Database ###
-#elevationDatabase.url=jdbc:postgresql://localhost/my_postgis_db
+elevationDatabase.url=jdbc:postgresql://localhost/my_postgis_db
 elevationDatabase.login=postgres
 
 ### Passwords ###
